fix: wrap navigation

--- a/src/components/Navigation/ActionsBarNav.scss
+++ b/src/components/Navigation/ActionsBarNav.scss
@@ -44,6 +44,7 @@
       &-label {
         font-size: 12px;
         margin-top: -3px;
+        white-space: normal;
       }
     }
   }
