--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -9,7 +9,9 @@
     overflow-x: auto;
   }
   &-head {
-    @include theme-aware('background-color', 'header', 'tables');
+    tr {
+      @include theme-aware('background-color', 'header', 'tables');
+    }
   }
   &-tr {
     padding: 6px;
